@@ -2413,13 +2413,15 @@ public class StorageProxy implements StorageProxyMBean
         }
 
         long maxHintsSize = DatabaseDescriptor.getMaxHintsSizePerHost();
-        long actualTotalHintsSize = HintsService.instance.getTotalHintsSize(hostIdForEndpoint);
-        boolean hasHintsReachedMaxSize = maxHintsSize > 0 && actualTotalHintsSize > maxHintsSize;
-        if (hasHintsReachedMaxSize)
+        if (maxHintsSize > 0)
         {
-            Tracing.trace("Not hinting {} which has reached to the max hints size {} bytes on disk. The actual hints size on disk: {}",
-                          endpoint, maxHintsSize, actualTotalHintsSize);
-            return false;
+            long actualTotalHintsSize = HintsService.instance.getTotalHintsSize(hostIdForEndpoint);
+            if (actualTotalHintsSize > maxHintsSize)
+            {
+                Tracing.trace("Not hinting {} which has reached to the max hints size {} bytes on disk. The actual hints size on disk: {}",
+                              endpoint, maxHintsSize, actualTotalHintsSize);
+                return false;
+            }
         }
 
         return true;
