@@ -37,6 +37,7 @@ import org.apache.cassandra.schema.Schema;
 import org.apache.cassandra.db.Mutation;
 import org.apache.cassandra.db.RowUpdateBuilder;
 import org.apache.cassandra.schema.KeyspaceParams;
+import org.hamcrest.Matchers;
 
 import static org.apache.cassandra.utils.ByteBufferUtil.bytes;
 
@@ -100,6 +101,8 @@ public abstract class AlteredHints
                     hintNum++;
                 }
             }
+
+            Assert.assertThat(descriptor.hintsFileSize(dir), Matchers.greaterThan(0L));
         }
 
         try (HintsReader reader = HintsReader.open(descriptor.file(dir)))
