@@ -29,15 +29,18 @@ import org.apache.cassandra.schema.KeyspaceParams;
 import org.apache.cassandra.schema.Schema;
 import org.apache.cassandra.utils.Clock;
 import org.apache.cassandra.utils.FBUtilities;
+
 import org.junit.BeforeClass;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 
+import static org.hamcrest.Matchers.greaterThan;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 
 import static org.apache.cassandra.Util.dk;
@@ -146,22 +149,20 @@ public class HintsCatalogTest
     }
 
     @Test
-    public void hintsTotalSizeTest() throws IOException
+    public void emptyHintsTotalSizeTest() throws IOException
     {
         File directory = new File(testFolder.newFolder());
         UUID hostId = UUID.randomUUID();
-        long now = Clock.Global.currentTimeMillis();
         long totalSize = 0;
         HintsCatalog catalog = HintsCatalog.load(directory, ImmutableMap.of());
         HintsStore store = catalog.get(hostId);
         assertEquals(totalSize, store.getTotalFileSize());
         for (int i = 0; i < 3; i++)
         {
-            HintsDescriptor descriptor = new HintsDescriptor(hostId, now + i);
-            writeDescriptor(directory, descriptor);
-            store.offerLast(descriptor);
-            assertTrue("Total file size should increase after writing more hints", store.getTotalFileSize() > totalSize);
-            totalSize = store.getTotalFileSize();
+            store.getOrOpenWriter();
+            store.closeWriter();
+            assertTrue("Even empty hint files should occupy some space as descriptor is written",
+                       store.getTotalFileSize() > 0);
         }
     }
 
@@ -243,5 +244,7 @@ public class HintsCatalogTest
                 session.append(hint);
             }
         }
+
+        assertThat(descriptor.hintsFileSize(directory), greaterThan(0L));
     }
 }
