@@ -1,4 +1,5 @@
 4.1.5
+ * Do not go to disk for reading hints file sizes (CASSANDRA-19477)
  * Fix system_views.settings to handle array types (CASSANDRA-19475)
 Merged from 4.0:
  * Push LocalSessions info logs to debug (CASSANDRA-18335)
